--- a/src/css/main-page.css
+++ b/src/css/main-page.css
@@ -1,3 +1,125 @@
-main .container {
-    min-height: 500px;
+main .container-fluid {
+    background: var(--primary-color);
+}
+
+/* *phần layout bên trái */
+.left-layout {
+    background: var(--primary-color);
+    box-shadow: 0 0 4px var(--normal-color);
+    padding: 6px 0;
+    height: 100%;
+}
+h3.sub-title {
+    text-transform: uppercase;
+    text-align: center;
+    color: var(--normal-color);
+    font-size: 24px;
+}
+ul.menu-list {
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+}
+ul.menu-list li.menu-item {
+    list-style-type: none;
+    margin: 4px 0;
+    padding: 0 12px;
+    cursor: pointer;
+}
+ul.menu-list li.menu-item a {
+    font-size: 18px;
+    color: var(--normal-color);
+    text-decoration: none;
+    font-weight: 600;
+}
+ul.menu-list li.menu-item:hover {
+    background: var(--normal-color);
+}
+ul.menu-list li.menu-item:hover a {
+    color: var(--primary-color);
+}
+
+
+/* *phần layout bên phải */
+.right-layout {
+    margin-top: 6px;
+}
+h1.title {
+    text-transform: uppercase;
+    margin: 16px;
+}
+/* phần slide */
+.slide-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.slide-wrapper {
+    width: 100%;
+    height: 250px;
+    border-radius: 6px;
+    overflow: hidden;
+    box-shadow: 0 0 4px #0006;
+    background: var(--normal-color);
+}
+.slide-wrapper * {
+    height: 100%;
+}
+.slide-wrapper img {
+    object-fit: cover;
+    opacity: .9;
+}
+
+/* phần nội dung sản phẩm */
+/* thẻ sản phẩm */
+.products-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+.product-wrapper {
+    flex: 0 0 calc(100% / 4);
+    padding: 8px;
+}
+.product-content {
+    background: var(--normal-color);
+    color: var(--des-color);
+    border-radius: 4px;
+    overflow: hidden;
+    box-shadow: var(--normal-shadow);
+}
+.product-wrapper .wrapper-img {
+    width: 100%;
+    height: 200px;
+    background: var(--normal-color);
+}
+.product-wrapper .wrapper-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: .9;
+}
+.wrapper-content {
+    padding: 0 12px;
+}
+.wrapper-content .content-title {
+    color: var(--primary-color);
+    margin-top: 8px;
+}
+/* về phần lượt xem và yêu thích */
+.wrapper-controls {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 4px 18px;
+    border-top: 1px solid var(--primary-color);
+}
+.wrapper-controls i {
+    font-size: 20px;
+}
+.wrapper-controls > i {
+    color: var(--danger-color);
+    cursor: pointer;
+}
+.wrapper-controls span {
+    color: var(--info-color);
 }
