--- a/src/css/root.css
+++ b/src/css/root.css
@@ -1,13 +1,15 @@
 :root {
-    --normal-color: #292826;
-    --second-color: #f3dd12;
-    --primary-color: #F9D342;
-    --des-color: #ddc771;
+    --normal-color: #161b21;
+    --second-color: #dbedff;
+    --primary-color: #f4a950;
+    --des-color: #ccdae8;
+    --sub-des-color: #f6b361;
     --text-color: black;
     --normal-shadow: 0 0 4px #0007;
     --small-shadow: 0 0 2px #0006;
     --big-shadow: 0 0 10px #0007;
     --danger-color: red;
-    --info-color: rgb(204, 218, 232);
+    --info-color: #ccdae8;
     --success-color: green;
+    --warn-color: rgb(227, 151, 8);
 }
