--- a/docs/src/css/main.css
+++ b/docs/src/css/main.css
@@ -10,6 +10,8 @@
 @import url(./partials.css);
 /* này là css trang chủ */
 @import url(./main-page.css);
+/* này là trang tài khoản */
+@import url(./auth.css);
 
 
 * {
