--- a/src/css/root.css
+++ b/src/css/root.css
@@ -1,7 +1,7 @@
 :root {
-    --normal-color: #161b21;
-    --second-color: #dbedff;
-    --primary-color: #f4a950;
+    --normal-color: #e88c03;
+    --second-color: #f4f4f4;
+    --primary-color: #eeeeee;
     --des-color: #ccdae8;
     --sub-des-color: #f6b361;
     --text-color: black;
@@ -9,7 +9,8 @@
     --small-shadow: 0 0 2px #0006;
     --big-shadow: 0 0 10px #0007;
     --danger-color: red;
-    --info-color: #ccdae8;
-    --success-color: green;
+    --info-color: #5ea8f1;
+    --success-color: rgb(37, 206, 19);
     --warn-color: rgb(227, 151, 8);
+    --main-shadow: 0 0 4px #0008;
 }
