--- a/src/css/partials.css
+++ b/src/css/partials.css
@@ -58,7 +58,7 @@ ul.menu li:hover > a {
 }
 ul.menu li > a {
     text-decoration: none;
-    color: var(--primary-color);
+    color: var(--text-color);
 }
 /* phần navbar search */
 ul.menu li:has(form):hover {
@@ -90,8 +90,8 @@ ul.menu li:has(form):hover {
 .footer-title {
     font-size: 30px;
     text-transform: uppercase;
-    color: var(--primary-color);
-    font-weight: 400;
+    color: var(--text-color);
+    font-weight: 600;
 }
 ul.footer-list li {
     list-style-type: none;
@@ -109,11 +109,11 @@ ul.footer-list li:hover > a {
 ul.footer-list li a {
     text-decoration: none;
     font-size: 20px;
-    color: var(--des-color);
+    color: var(--text-color);
 }
 .footer-des {
     margin: 8px 0;
-    color: var(--des-color);
+    color: var(--text-color);
 }
 
 /* *Responsive */
